Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -107,15 +107,9 @@ Anthropology, MPI EVA), Benjamin Marco Peter (MPI EVA,
     \item An extended admixture pulse model reveals the limits to the dating of Human-Neandertal introgression
 \end{enumerate}
 \section{Abstract}\label{abstract}
-The time of gene flow between Neandertals and modern humans is an event of great importance in human genetic history. However, most models assume an instantaneous admixture pulse, where all gene flow happens in a single generation. 
 
-Here, we introduce an extended pulse model, that allows for ongoing gene flow. This model introduces a single parameter for the duration of gene flow but retains much the mathematical simplicity of the simple pulse model. 
 
-In simulations, we find that while the mean time of admixture is robust to deviations in gene flow model, in most cases it is difficult to estimate the duration of gene flow, particularly when the gene flow is very old. We also find that technical parameters, in particular the fine-scale recombination map potentially introduces a major bias.
-
-Thus, we find that the mean time alone is not sufficient to infer the characterize the admixture event, and that gene flow could have happened hundreds of generations before or afterwards. Ancient genomes from during the admixture event are thus likely required to further resolve the question when humans and Neandertals admixed.
-
-The time of gene flow between Neandertals and modern humans is an event of great importance in human genetic history. However, most models assume an instantaneous admixture pulse, where all gene flow happens in a single generation. 
+The time of gene flow between Neandertals and modern humans is an event of great importance in human genetic history. However, most models used for estimating the time of gene flow assume an instantaneous admixture pulse, where all gene flow happens in a single generation. 
 
 Here, we introduce an extended pulse model, that allows for ongoing gene flow. This model introduces a single parameter for the duration of gene flow whilst retaining much of the mathematical simplicity of the simple pulse model. 
 
