Hajdinjak 2021 unpublished includede

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1814,3 +1814,11 @@ An ancient human genome illuminates human demography in Eurasia and Europe.},
 	pages = {e1006340},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/2YM32TSM/Juric et al. - 2016 - The Strength of Selection against Neanderthal Intr.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/LDZSQHDE/article.html:text/html}
 }
+
+
+@article{hajdinjak_early_2021,
+	title = {An early expansion of modern humans to {Europe} had recent {Neandertal} ancestors and links to {Asia}},
+	journal = {unpublished},
+	author = {Hajdinjak, Mateja and Mafessoni, Fabrizio and Skov, Laurits and Vernot, Benjamin and Peter, Benjamin and Meyer, Matthias and Skoglund, Pontus and Kelso, Janet and Pääbo, Svante},
+	year = {2021}
+}
