Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -133,7 +133,7 @@ While the presence of a gene flow event is well established, much uncertainty re
 
 \subsection{Admixture segment models}\label{Admixture models}
 
-The most common approach to admixture dating is using a ``recombination clock'': Conceptually, admixture segments are the result of recombination breaking down introgressed chromosomes: The offspring of an archaic and modern human parent will have full chromosomes of either ancestry. If this individual has offspring in a largely modern human population, meiotic recombination progressively breaks the ancestry segments of the archaic chromosome  down into smaller and smaller pieces, whose size decrease with time \citep{falush_inference_2003, liang_lengths_2014, gravel_population_2012}. Correspondingly, one would expect the segments of Neandertal ancestry in early modern human specimens to decrease with time, a signal that has been recovered consistently from early modern human genomes \citep{fu_genome_2014, moorjani_genetic_2016, sikora_ancient_2017, sikora_population_2019}. 
+The most common approach to admixture dating is using a ``recombination clock'': Conceptually, admixture segments are the result of recombination breaking down introgressed chromosomes: The offspring of an archaic and modern human parent will have full chromosomes of either ancestry. If this individual has offspring in a largely modern human population, meiotic recombination progressively breaks the ancestry segments of the archaic chromosome  down into smaller and smaller pieces, whose size decrease with time \citep{falush_inference_2003, liang_lengths_2014, gravel_population_2012}. Correspondingly, one would expect the segments of Neandertal ancestry in early modern human specimens to decrease with time, a signal that has been recovered consistently from early modern human genomes \citep{fu_genome_2014,fu_early_2015, moorjani_genetic_2016, sikora_ancient_2017, sikora_population_2019, hajdinjak_early_2021}. 
 
 \subsection{Inference}
 Models to infer the admixture time thus exploit this inverse relationship between admixture time and segment length for inference of the time of an admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014,pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}. The simplest models assume that admixture segments are rare and inbreeding is not significant, such that admixture segments are unlikely to recombine with each other \citep{pool_inference_2009,liang_lengths_2014}. Further assumptions are that the segments act neutrally \citep{shchur_distribution_2019} and the recombination rate is the same in different populations at all times \citep{gravel_population_2012}. In addition, it is frequently assumed that the admixture happens over a very short time period, in a single \textit{admixture pulse} \citep{moorjani_history_2011}, usually modelled as a single generation of gene flow.
@@ -141,13 +141,13 @@ Models to infer the admixture time thus exploit this inverse relationship betwee
 
 \subsection{The two approaches and their application to find archaic admixture dates}\label{the-two-approaches-and-their-application-to-find-archaic-admixture-dates}
 
-The first step in dating admixture events from genetic data is therefore estimating the length distribution of admixture segments.  There are two main approaches for this; a first sets of methods starts with identifying all admixture segments over a certain length, and then use the length distribution of these segments for inference. Alternatively, the length distribution can also be estimated from patterns of linkage along a chromosome directly, without explicitly inferring the genomic location of these segments (\citep{chimusa_dating_2018}) (Figure \ref{fig:fig1} B).
+The first step in dating admixture events from genetic data is therefore estimating the length distribution of admixture segments.  There are two main approaches for this; a first sets of methods starts with identifying all admixture segments over a certain length, and then use the length distribution of these segments for inference. Alternatively, the length distribution can also be estimated from patterns of linkage along a chromosome directly, without explicitly inferring the genomic location of these segments \citep{chimusa_dating_2018} (Figure \ref{fig:fig1} B).
 
- In the first set of approaches, the identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. These approaches are most useful for recent admixture estimated on high-quality data, as uncertainty in the segment identification is not easily fed forward into the timing inference \citep{hellenthal_genetic_2014}.
+ In the first set of approaches, the identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,racimo_signatures_2017,skov_detecting_2018}. These approaches are most useful for recent admixture estimated on high-quality data, as uncertainty in the segment identification is not easily fed forward into the timing inference \citep{hellenthal_genetic_2014}.
 
 Thus, methods using admixture-induced linkage disequilibrium (ALD) are more widely used \citep{moorjani_history_2011,sankararaman_date_2012,sankararaman_combined_2016}. As admixture introduces entire chromosomes, variants that result from the differences between the parental chromosomes are all in linkage disequilibrium (LD) \citep{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}. As recombination decreases the size of admixture segments over time, the linkage decreases correspondingly \citep{patterson_methods_2004}. 
 
-In case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from an ancestral population, or LD caused by bottlenecks and genetic drift after the split from the parental populations \citep{moorjani_history_2011}. For ancient admixture events however, ALD is quite similar to the genomic background. To partially circumvent this issue for dating the Neandertal-human admixture time, variants are ascertained such that only  markers that are (nearly) differentially fixed between the two groups are used 
+In case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from an ancestral population, or LD caused by bottlenecks and genetic drift after the split from the parental population \citep{moorjani_history_2011}. For ancient admixture events however, ALD is quite similar to the genomic background. To partially circumvent this issue for dating the Neandertal-human admixture time, variants are ascertained such that only  markers that are (nearly) differentially fixed between the two groups are used 
 \citep{sankararaman_date_2012}. 
 
 Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameter is informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. 
@@ -168,6 +168,7 @@ One explanation is that there has been a common admixture event into an ancestor
 
 The evidence for more complex patterns of Neandertal gene flow is more spotty, as most Neandertal admxiture segments have a similar divergence to the sequenced Neandertals \citep{browning_analysis_2018}. However, an example of  Neandertal gene flow private to a local population is the identification of admixture segments spanning several Mbp in \textit{Oase 1}, the genome of an early modern human from Romania. He had a recent Neandertal ancestor less than 200 years before he lived (~37–42 kya), later than the age of the \textit{Ust'Ishim} modern human which is already admixed with Neadertals. \textit{Oase 1} did however not contribute substantially to present-day human populations  \citep{fu_genome_2014,fu_early_2015}.
 
+Lately \cite{hajdinjak_early_2021} showed that segments from a recent Neandertal ancestor found in  46 - 43 (cal. BP) old modern humans from Bulgaria have a higher sharing with present-day East-Asians segments, indicating that this local gene flow did contribute to modern human populations \citep{hajdinjak_early_2021}.    
 
 \subsection{Limitations of the pulse model}\label{Why can't we us the pulse model}
 
@@ -207,7 +208,7 @@ We conclude that while current methods are sufficient to estimate the mean admix
 compared to the background . The ALD approach estimates linkage
 between the introgressed variants (green circles), wheres the haplotype approach tries
 to estimate the segment directly (grey area). C) Migration rate per generation
-modeled using the extended pulse model for different admixture durations (colored lines). The filled area under the curve indicates the boundaries of the discreat realization of the duration of gene flow $t_d$.
+modeled using the extended pulse model for different admixture durations (colored lines). The filled area under the curve indicates the boundaries of the discrete realization of the duration of gene flow $t_d$.
 The dotted line indicates the maximum time of gene flow. D) The expected LD decay under the extended pulse model.}
 \end{figure}
 
@@ -223,7 +224,7 @@ Finally, we apply our methods to distinguish several admixture scenarios with di
 
 \subsection{Admixture Models and Inference}\label{admixture models}
 
-In this section, we present formal definitions of the admixture models used.  We assume we have $n$ admixture segments. We denote the length of the $i$-th segment as $L_i$. Further, the random variable $T_i$ represents the time when fragment $L_i$ entered the population. We assume that the $L_i$ and $T_i$ are both realizations from more general distributions $L$ and $T$ that reflect the overall segment length and admixture time distributions, respectively. 
+In this section, we present formal definitions of the admixture models used.  We assume we have $n$ admixture segments. We denote the length of the $i$-th segment as $L_i$. Further, the random variable $T_i$ represents the time when segment $L_i$ entered the population. We assume that the $L_i$ and $T_i$ are both realizations from more general distributions $L$ and $T$ that reflect the overall segment length and admixture time distributions, respectively. 
 
 Given $T_i$, we assume that $L_i$ is exponentially distributed with rate parameter given by the admixture time $t$ and the recombination rate $r$.
 \begin{equation}
@@ -280,7 +281,7 @@ and variance
 
 Note that this definition of the segment length distribution is independent from the migration rate $m$ at $t_m$. Hence, the model does not consider the (higher) probability of admixture segments recombining with each other when the migration rate is high. This can be done following Gravel et al. 2012 \citep{gravel_population_2012}. For Neandertal admixture where $m$, the admixture fraction, is typically low, the exponential assumption is satisfied \citep{liang_lengths_2014}.
 
-\subsubsection{The Extended Pulse Model}\label{The Extended Pulse Model}
+\subsubsection{The Extended Pulse Model OG}\label{The Extended Pulse Model}
 
 For the extended pulse model, we assume that the $T_i$ follow a Gamma distribution. It is convenient to parametrize the Gamma distribution by its mean $t_m$ and its shape parameter $k$.  $\Gamma(k,\frac{t_m}{k})$, hence
 
@@ -307,21 +308,21 @@ Here, we define the admixture duration $t_d=4t_m k^{-\frac{1}{2}} $, which is a 
     P(L=l) = t_{m}^{-k} \ \Bigg( \frac{k}{l+\frac{k}{t_{m}}}\Bigg)^{k+1}
 \end{equation}
 
-The distribution  in equation \ref{eq:Likelihood_function_extended_pulse} is known as a \emph{Lomax} or \emph{Pareto-II} distribution, which is a heavier-tailed relative of the Exponential distribution. It is typically parameterized using a shape parameter $\alpha=k-1$ and scale parameter $\lambda = \frac{k}{t_m}$. 
+The distribution  in equation \ref{eq:Likelihood_function_extended_pulse} is known as a \emph{Lomax} or \emph{Pareto-II} distribution, which is a heavier-tailed relative of the Exponential distribution. It is typically parameterized using a shape parameter $\alpha=k$ and scale parameter $\lambda = \frac{k}{t_m}$. 
 
 
 Therefore, the expected segment length distribution under the extended pulse model is the same as under the simple pulse model (\ref{eq:Expected_l_simple_pulse}):
 
 \begin{equation}
 \label{eq:Expected_l_extended_pulse}
-\mathbb{E}[L] = \frac{1}{t_{m}}
+\mathbb{E}[L] = \frac{k}{(k-1)}\frac{1}{t_{m}}
 \end{equation}
 
 And the variance for $k>2$ is 
 
 \begin{equation}
 \label{eq:Var_l_extended_pulse}
-Var[L] = \frac{1}{t_m^2}\frac{k+1}{k-1}\text{.}
+Var[L] = \frac{1}{t_m^2}\frac{k^3}{(k-1)^2 (k-2)}\text{.}
 \end{equation}
 
 
@@ -553,7 +554,7 @@ We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagy
 
 
 
-Having established the expectations of the segment length for gene flow under a simple and extended pulse, we want to test the effects of these models using coalescent simulations. First, we compare the inference of simulations under a simple and extended pulse of gene flow while assuming only one generation of gene flow. We contrast this effect with the effect of other model assumptions and analysis parameters. Taking in consideration the most impactive effects, we establish the conditions under which we can use the extended pulse model for gene flow duration inference. Finally, we apply our model the 1000 Genomes data.
+Having established the expectations of the segment length for gene flow under a simple and extended pulse, we want to test the effects of these models with coalescent simulations using \texttt{msprime} \citep{kelleher_efficient_2016}. First, we compare the inference of simulations under a simple and extended pulse of gene flow while assuming only one generation of gene flow for both scenarios. We contrast this effect with the effect of other model assumptions and analysis parameters. Taking in consideration the most impactive effects, we establish the conditions under which we can use the extended pulse model for gene flow duration inference. Finally, we apply our model the 1000 Genomes data \citep{the_1000_genomes_project_consortium_global_2015}.
 
 
 
@@ -613,8 +614,8 @@ admixture time estimates for a simple or extended admixture pulse are similarly 
 \subsection{Parameter estimation under the extended pulse model}\label{estimating the Lomax-parameters under different conditions}
 In Figure \ref{fig:fig4}, we show the accuracy of $t_d$ and $t_m$ estimates in two sets of simulations. In panels A and B we increase both $t_m$ and $t_d$ at a similar rate, such that gene flow ends 50 generations before sampling ($t_{end}=50$, where $t_{end}= t_m - \frac{t_d}{2}$). In panels C and D $t_d$ is kept fixed at 800, but we increase $t_m$. We further vary recombination rate settings as i) inference and simulation under constant recombination rate, ii) simulation using HapMap, no correction, iii) simulation using HapMap, correction using AAMap, iv) inference and simulation using HapMap. 
 
-Figure \ref{fig:fig4} A and C show the mean
-time estimates received from the simple and extended pulse model fit. For simulations under a
+Figure \ref{fig:fig4}A and C show the mean
+time estimates received from the simple and extended pulse model fit. Figure \ref{fig:fig4}B and D the corresponding admixture duration estimate. For simulations under a
 constant recombination the mean time can be estimated confidently for different durations and different sampling times after the end of the admixture event in both cases. 
 
 Under constant recombination settings, we find that parameters under the extended pulse are well-estimated in all scenarios, although we observe a small overestimate of both $t_m$ and $t_d$, for very long admixture durations in the very distant past. In contrast, inference under the simple pulse model results in a slight underestimate (Figure \ref{fig:fig2}, \ref{fig:fig4}).
@@ -655,12 +656,12 @@ with all YRI and 3 high coverage Neandertals as reference populations. A) Weight
 \section{Discussion}\label{discussion}
 While it is now well-established that early modern humans interbred with Neandertals, less consensus exists about when and where these interactions might have happened. Here we focus on genetic dating, one of the major approaches used to refine the plausible dates.
 
-Previous estimates to date Neandertal-human gene flow have focused almost entirely on the mean time of gene flow, for which reasonably tight credible intervals can be estimated \citep{green_draft_2010, sankararaman_date_2012}. Here, we show that these models cannot be used to establish bounds on when gene flow happened, as models involving hundreds of generations of gene flow are virtually indistinguishable from instantaneous gene flow. Thus, it is important to realize that the estimated time of gene flow of between 41 kya -- 54 kya \citep{moorjani_genetic_2016} is a credible range for the mean time of gene flow, and does not bound when gene flow happened. This is of great practical importance as it might be tempting to link the genetic admixture date estimates with biogeographical events \citep{sankararaman_date_2012,lazaridis_genomic_2016,jacobs_multiple_2019,vyas_analyses_2019,douka_age_2019}. Indeed, our results show that substantial gene flow could also have happened tens of thousands of years before or after the mean time of gene flow. These dates are thus entirely consistent with early modern human genomes that have recent Neandertal ancestors \cite{fu_genome_2014, hajdinjak_bk_paper}. As we also show that mean time estimates are biased towards more recent dates, substantial gene flow might have happened before 54 kya. 
+Previous estimates to date Neandertal-human gene flow have focused almost entirely on the mean time of gene flow, for which reasonably tight credible intervals can be estimated \citep{green_draft_2010, sankararaman_date_2012}. Here, we show that these models cannot be used to establish bounds on when gene flow happened, as models involving hundreds of generations of gene flow are virtually indistinguishable from instantaneous gene flow. Thus, it is important to realize that the estimated time of gene flow of between 41 kya -- 54 kya \citep{moorjani_genetic_2016} is a credible range for the mean time of gene flow, and does not bound when gene flow happened. This is of great practical importance as it might be tempting to link the genetic admixture date estimates with biogeographical events \citep{sankararaman_date_2012,lazaridis_genomic_2016,jacobs_multiple_2019,vyas_analyses_2019,douka_age_2019}. Indeed, our results show that substantial gene flow could also have happened tens of thousands of years before or after the mean time of gene flow. These dates are thus entirely consistent with early modern human genomes that have recent Neandertal ancestors \citep{fu_genome_2014, hajdinjak_early_2021}. As we also show that mean time estimates are biased towards more recent dates, substantial gene flow might have happened before 54 kya. 
 
-This might also have some implications for selection on introgressed Neandertal haplotypes. Neandertal alleles have been suggested to be deleterious in modern human populations due to an increased mutation load \citep{harris_genetic_2016, juric_strength_2016}. Some details of these models may be slightly affected if migration occurred over a longer time. For example, \citep{harris_genetic_2016} suggested that an initial pulse of gene flow of up to 10\% Neandertal ancestry might be necessary, with very high variance in the first few generations after gene flow. More gradual introgression might mean that such high admixture proportions were never achieved, but rather a continuous migration-selection balance process persisted for the contact period, where deleterious Neandertal alleles continually entered the modern human populations, but were selected against immediately. 
+This might also have some implications for selection on introgressed Neandertal haplotypes. Neandertal alleles have been suggested to be deleterious in modern human populations due to an increased mutation load \citep{harris_genetic_2016, juric_strength_2016}. Some details of these models may be slightly affected if migration occurred over a longer time. For example, \cite{harris_genetic_2016} suggested that an initial pulse of gene flow of up to 10\% Neandertal ancestry might be necessary, with very high variance in the first few generations after gene flow. More gradual introgression might mean that such high admixture proportions were never achieved, but rather a continuous migration-selection balance process persisted for the contact period, where deleterious Neandertal alleles continually entered the modern human populations, but were selected against immediately. 
 However, in terms of the overall frequencies achieved, there is likely little difference. For example, \cite{juric_strength_2016} showed using a two-locus model that the frequencies of Neandertal haplotypes alone cannot be used to distinguish different admixture histories.
 
-In addition, we find that modelling and method assumptions have an impact on admixture time estimates that are of a similar magnitude or much higher. Especially recombination rate variation may pose a practical limitation to the accuracy of admixture date estimates, and has to be very carefully considered when making inferences about admixture times. This is because both an extended pulse, as well as a non-homogeneous recombination map, lead to an admixture segment distribution that deviates from the expected exponential distribution. Correcting for just one of these factors may thus potentially conflate these issues, and may lead to a substantial underestimate of mean admixture times \citep{sankararaman_date_2012}. Therefore, accurate and population-specific fine-scale recombination maps are needed for accurate admixture time estimates, at least in the case for archaic admixture that happened more than a thousand generations ago; more recent admixture does appear to be somewhat more robust, perhaps because coarser-scale recombination maps are better estimated and differ less between populations \citep{hinch_landscape_2011}. 
+In addition, we find that modelling and method assumptions have an impact on admixture time estimates that are of a similar magnitude or much higher than the effect of assuming a one-generation pulse. Especially recombination rate variation may pose a practical limitation to the accuracy of admixture date estimates, and has to be very carefully considered when making inferences about admixture times. This is because both an extended pulse, as well as a non-homogeneous recombination map, lead to an admixture segment distribution that deviates from the expected exponential distribution. Correcting for just one of these factors may thus potentially conflate these issues, and may lead to a substantial underestimate of mean admixture times \citep{sankararaman_date_2012}. Therefore, population-specific fine-scale recombination maps are needed for accurate admixture time estimates, at least in the case for archaic admixture that happened more than a thousand generations ago; more recent admixture does appear to be somewhat more robust, perhaps because coarser-scale recombination maps are better estimated and differ less between populations \citep{hinch_landscape_2011}. 
 
 
 To further refine admixture timing, time series data from more early modern human and Neandertal genomes are likely needed. In particular, measures based on population differentiation (e.g \citep{browning_analysis_2018,wall_higher_2013,villanea_multiple_2019}) are very promising to understand the different events that contributed to archaic ancestry in present-day humans. While Neandertal ancestry in present-day people has been largely homogenized due to the substantial gene flow between populations, samples from both the Neandertal and early modern human populations immediately involved with the gene flow could likely refine when and where this gene flow happened. 
